airflow/logs/dag_id=test_postgres_hook/run_id=manual__2026-05-13T21:50:22.991184+00:00/task_id=crear_tabla/attempt=1.log
[2026-05-13T21:50:28.553+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-05-13T21:50:28.572+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: test_postgres_hook.crear_tabla manual__2026-05-13T21:50:22.991184+00:00 [queued]>
[2026-05-13T21:50:28.576+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: test_postgres_hook.crear_tabla manual__2026-05-13T21:50:22.991184+00:00 [queued]>
[2026-05-13T21:50:28.577+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2026-05-13T21:50:28.588+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): crear_tabla> on 2026-05-13 21:50:22.991184+00:00
[2026-05-13T21:50:28.592+0000] {standard_task_runner.py:64} INFO - Started process 14556 to run task
[2026-05-13T21:50:28.595+0000] {standard_task_runner.py:90} INFO - Running: ['airflow', 'tasks', 'run', 'test_postgres_hook', 'crear_tabla', 'manual__2026-05-13T21:50:22.991184+00:00', '--job-id', '52', '--raw', '--subdir', 'DAGS_FOLDER/test_postgres.py', '--cfg-path', '/tmp/tmpxifpipby']
[2026-05-13T21:50:28.595+0000] {standard_task_runner.py:91} INFO - Job 52: Subtask crear_tabla
[2026-05-13T21:50:28.620+0000] {task_command.py:426} INFO - Running <TaskInstance: test_postgres_hook.crear_tabla manual__2026-05-13T21:50:22.991184+00:00 [running]> on host codespaces-c105b0
[2026-05-13T21:50:28.664+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='test_postgres_hook' AIRFLOW_CTX_TASK_ID='crear_tabla' AIRFLOW_CTX_EXECUTION_DATE='2026-05-13T21:50:22.991184+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-05-13T21:50:22.991184+00:00'
[2026-05-13T21:50:28.665+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-05-13T21:50:28.792+0000] {base.py:84} INFO - Using connection ID 'postgres_local' for task execution.
[2026-05-13T21:50:28.807+0000] {sql.py:495} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS alumnos alumnos (
            id SERIAL PRIMARY KEY,
            nombre VARCHAR(50),
            edad INT
        );
    , parameters: None
[2026-05-13T21:50:28.808+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-05-13T21:50:28.808+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/workspaces/Airflow_project/airflow_env/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspaces/Airflow_project/airflow_env/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspaces/Airflow_project/airflow_env/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspaces/Airflow_project/airflow_env/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspaces/Airflow_project/airflow_env/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspaces/Airflow_project/airflow/dags/test_postgres.py", line 22, in crear_tabla
    hook.run(f"""
  File "/workspaces/Airflow_project/airflow_env/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 442, in run
    self._run_command(cur, sql_statement, parameters)
  File "/workspaces/Airflow_project/airflow_env/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 500, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "alumnos"
LINE 2:         CREATE TABLE IF NOT EXISTS alumnos alumnos (
                                                   ^

[2026-05-13T21:50:28.815+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=test_postgres_hook, task_id=crear_tabla, run_id=manual__2026-05-13T21:50:22.991184+00:00, execution_date=20260513T215022, start_date=20260513T215028, end_date=20260513T215028
[2026-05-13T21:50:28.824+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 52 for task crear_tabla (syntax error at or near "alumnos"
LINE 2:         CREATE TABLE IF NOT EXISTS alumnos alumnos (
                                                   ^
; 14556)
[2026-05-13T21:50:28.848+0000] {local_task_job_runner.py:243} INFO - Task exited with return code 1
[2026-05-13T21:50:28.862+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-05-13T21:50:28.868+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
